--- a/pom.xml
+++ b/pom.xml
@@ -58,6 +58,17 @@
 			<artifactId>JDA</artifactId>
 			<version>5.0.0-beta.13</version>
 		</dependency>
+		<dependency>
+			<groupId>org.mapstruct</groupId>
+			<artifactId>mapstruct</artifactId>
+			<version>1.4.2.Final</version>
+		</dependency>
+		<dependency>
+			<groupId>org.mapstruct</groupId>
+			<artifactId>mapstruct-processor</artifactId>
+			<version>1.4.2.Final</version>
+		</dependency>
+
 
 	</dependencies>
 
