--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,16 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
+		<!-- Spring Data Redis & Jedis Client -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-redis</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>redis.clients</groupId>
+			<artifactId>jedis</artifactId>
+		</dependency>
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-quartz</artifactId>
@@ -67,6 +77,13 @@
 			<groupId>org.mapstruct</groupId>
 			<artifactId>mapstruct-processor</artifactId>
 			<version>1.4.2.Final</version>
+		</dependency>
+		<!--
+		https://mvnrepository.com/artifact/com.github.ygimenez/Pagination-Utils -->
+		<dependency>
+			<groupId>com.github.ygimenez</groupId>
+			<artifactId>Pagination-Utils</artifactId>
+			<version>4.0.5</version>
 		</dependency>
 
 
