--- a/pom.xml
+++ b/pom.xml
@@ -85,6 +85,12 @@
 			<artifactId>Pagination-Utils</artifactId>
 			<version>4.0.5</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/com.cloudinary/cloudinary-http44 -->
+		<dependency>
+			<groupId>com.cloudinary</groupId>
+			<artifactId>cloudinary-http44</artifactId>
+			<version>1.34.0</version>
+		</dependency>
 
 
 	</dependencies>
